Creacion y avance de vistas, se implemento el boton de logout en todas. Combobox en proceso.

--- a/css/dashboard_cliente_ordenes.css
+++ b/css/dashboard_cliente_ordenes.css
@@ -55,6 +55,11 @@ body {
     border-radius: 0;
   }
   
+  .logoutLblPos{
+    position:fixed;
+    right:10px;
+    top:10px;
+ }
   /*
    * Dashboard
    */
