--- a/css/dashboard_gerenteventas_camiones.css
+++ b/css/dashboard_gerenteventas_camiones.css
@@ -12,8 +12,8 @@ body {
    */
   
   h1 {
-    padding-bottom: 9px;
     margin-bottom: 20px;
+    padding-bottom: 9px;
     border-bottom: 1px solid #eee;
   }
   
@@ -27,10 +27,16 @@ body {
     bottom: 0;
     left: 0;
     z-index: 1000;
-    padding: 20px 0;
+    padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
     border-right: 1px solid #eee;
+  }
+  
+  /* Sidebar navigation */
+  .sidebar {
+    padding-left: 0;
+    padding-right: 0;
   }
   
   .sidebar .nav {
@@ -48,6 +54,7 @@ body {
   .sidebar .nav-link {
     border-radius: 0;
   }
+
   .button {
     max-width: 330px;
     padding: 15px;
@@ -55,17 +62,16 @@ body {
     float: left;
   }
   
-  .logoutLblPos {
+  .logoutLblPos{
     position:fixed;
     right:10px;
     top:10px;
  }
-
   /*
    * Dashboard
    */
   
-  /* Placeholders */
+   /* Placeholders */
   .placeholders {
     padding-bottom: 3rem;
   }
