--- a/css/dashboard_gerenteventas_overview.css
+++ b/css/dashboard_gerenteventas_overview.css
@@ -12,8 +12,8 @@ body {
  */
 
 h1 {
-  padding-bottom: 9px;
   margin-bottom: 20px;
+  padding-bottom: 9px;
   border-bottom: 1px solid #eee;
 }
 
@@ -27,10 +27,16 @@ h1 {
   bottom: 0;
   left: 0;
   z-index: 1000;
-  padding: 20px 0;
+  padding: 20px;
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
   border-right: 1px solid #eee;
+}
+
+/* Sidebar navigation */
+.sidebar {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .sidebar .nav {
@@ -54,12 +60,11 @@ h1 {
   right:10px;
   top:10px;
 }
-
 /*
  * Dashboard
  */
 
-/* Placeholders */
+ /* Placeholders */
 .placeholders {
   padding-bottom: 3rem;
 }
