--- a/css/dashboard_gerenteventas_overview.css
+++ b/css/dashboard_gerenteventas_overview.css
@@ -55,6 +55,14 @@ h1 {
   border-radius: 0;
 }
 
+.button {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+  top:50%;
+  float: left;
+}
+
 .logoutLblPos{
   position:fixed;
   right:10px;
