Actualizacion de vistas existentes y creacion de vista almacen.

--- a/css/dashboard_almacen_productos.css
+++ b/css/dashboard_almacen_productos.css
@@ -48,20 +48,26 @@ h1 {
 .sidebar .nav-link {
   border-radius: 0;
 }
-
 .button {
   max-width: 330px;
   padding: 10px;
   margin: 0 auto;
-  top:50%;
   float: left;
 }
 
-.logoutLblPos{
+.logoutLblPos {
   position:fixed;
   right:10px;
   top:10px;
 }
+
+.hidden {
+ display:none;
+ margin: auto;
+ width: 700px;
+}
+
+
 
 /*
  * Dashboard
