--- a/css/dashboard_gerenteventas_camiones.css
+++ b/css/dashboard_gerenteventas_camiones.css
@@ -67,6 +67,13 @@ body {
     right:10px;
     top:10px;
  }
+ 
+ .hidden {
+  display:none;
+  margin: auto;
+  width: 700px;
+  
+}
   /*
    * Dashboard
    */
