--- a/css/dashboard_gerenteventas_reportes.css
+++ b/css/dashboard_gerenteventas_reportes.css
@@ -57,8 +57,8 @@ body {
   
   .button {
     max-width: 330px;
-    /* padding: 1px; */
-    margin:auto;
+    padding: 15px;
+    margin: 0 auto;
   }
 
   .logoutLblPos{
